--- a/trabalhoCG/src/styles/sidebar.css
+++ b/trabalhoCG/src/styles/sidebar.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
+    gap: .5rem;
     font-family: 'Poppins', sans-serif;
     background: rgba( 255, 255, 255, 0.25 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
