--- a/trabalhoCG/src/styles/sidebar.css
+++ b/trabalhoCG/src/styles/sidebar.css
@@ -47,8 +47,18 @@
     transition: ease-in .3s;
 }
 
+.btn-aplicar{
+    background-color: green;
+    border: 1px solid rgb(87, 130, 23);
+}
+
 .btn:hover{
     background-color: #0056b3;
+}
+
+.btn-aplicar:hover{
+background-color: rgb(0, 57, 0);
+
 }
 
 .btn-info{
